--- a/src/view/Login.fxml
+++ b/src/view/Login.fxml
@@ -10,15 +10,16 @@
 <AnchorPane id="AnchorPane" prefHeight="290.0" prefWidth="480.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.LoginController">
    <children>
       <TextField fx:id="usernameField" layoutX="169.0" layoutY="124.0" prefHeight="25.0" prefWidth="275.0" />
-      <Label fx:id="usernameLabel" layoutX="87.0" layoutY="128.0" text="Username:" />
-      <Label fx:id="passwordLabel" layoutX="89.0" layoutY="194.0" text="Password:" />
-      <Label fx:id="headerLabel" layoutX="89.0" layoutY="59.0" text="Sign In">
+      <Label fx:id="usernameLabel" layoutX="62.0" layoutY="128.0" text="Username:" />
+      <Label fx:id="passwordLabel" layoutX="62.0" layoutY="194.0" text="Password:" />
+      <Label fx:id="headerLabel" layoutX="62.0" layoutY="59.0" text="Sign In">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Button fx:id="submit" layoutX="391.0" layoutY="241.0" mnemonicParsing="false" text="Sign In" />
+      <Button fx:id="submit" layoutX="391.0" layoutY="241.0" mnemonicParsing="false" onAction="#login" text="Sign In" />
       <Label fx:id="timezoneLabel" layoutX="14.0" layoutY="268.0" text="Timezone: EST" />
       <PasswordField fx:id="passwordField" layoutX="169.0" layoutY="190.0" prefWidth="275.0" />
+      <Label fx:id="incorrectPassword" layoutX="169.0" layoutY="224.0" textFill="RED" />
    </children>
 </AnchorPane>
