--- a/src/view/Dashboard.fxml
+++ b/src/view/Dashboard.fxml
@@ -1,10 +1,80 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.DashboardController">
+<AnchorPane id="AnchorPane" maxHeight="600.0" maxWidth="1000.0" minHeight="600.0" minWidth="1000.0" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.DashboardController">
    <children>
-      <Button fx:id="button" layoutX="195.0" layoutY="134.0" mnemonicParsing="false" text="Button" />
+      <TabPane layoutX="50.0" layoutY="50.0" minHeight="500.0" minWidth="900.0" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE">
+        <tabs>
+          <Tab text="Appointments">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <TableView layoutY="36.0" maxHeight="400.0" maxWidth="750.0" minHeight="400.0" minWidth="900.0" prefHeight="400.0" prefWidth="750.0">
+                           <columns>
+                              <TableColumn prefWidth="44.0" text="ID" />
+                              <TableColumn prefWidth="106.0" text="Title" />
+                              <TableColumn prefWidth="82.0" text="Type" />
+                              <TableColumn prefWidth="192.0" text="Description" />
+                              <TableColumn prefWidth="108.0" text="Location" />
+                              <TableColumn prefWidth="110.0" text="Contact" />
+                              <TableColumn prefWidth="93.0" text="Start Time" />
+                              <TableColumn prefWidth="88.0" text="End Time" />
+                              <TableColumn prefWidth="76.0" text="Customer ID" />
+                           </columns>
+                           <columnResizePolicy>
+                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                           </columnResizePolicy>
+                        </TableView>
+                        <Label layoutY="15.0" text=" Upcoming Appointments">
+                           <font>
+                              <Font name="System Bold Italic" size="14.0" />
+                           </font>
+                        </Label>
+                        <RadioButton layoutX="843.0" layoutY="16.0" mnemonicParsing="false" text="Month" />
+                        <RadioButton layoutX="780.0" layoutY="16.0" mnemonicParsing="false" text="Week" />
+                        <RadioButton layoutX="735.0" layoutY="16.0" mnemonicParsing="false" text="All" />
+                     </children>
+                  </AnchorPane>
+            </content>
+          </Tab>
+          <Tab text="Customers">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <TableView layoutY="36.0" maxHeight="400.0" maxWidth="750.0" minHeight="400.0" minWidth="900.0" prefHeight="400.0" prefWidth="750.0">
+                           <columns>
+                              <TableColumn prefWidth="44.0" text="ID" />
+                              <TableColumn prefWidth="183.0" text="Name" />
+                              <TableColumn prefWidth="274.0" text="Address" />
+                              <TableColumn prefWidth="127.0" text="Postal Code" />
+                              <TableColumn prefWidth="117.0" text="State/Territory" />
+                              <TableColumn prefWidth="154.0" text="Country" />
+                           </columns>
+                           <columnResizePolicy>
+                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                           </columnResizePolicy>
+                        </TableView>
+                        <Button layoutX="860.0" layoutY="445.0" mnemonicParsing="false" text="New" />
+                        <Button layoutX="815.0" layoutY="445.0" mnemonicParsing="false" text="Edit" />
+                        <Label layoutY="14.0" text=" All Customers">
+                           <font>
+                              <Font name="System Bold Italic" size="14.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </AnchorPane>
+            </content>
+          </Tab>
+        </tabs>
+      </TabPane>
    </children>
 </AnchorPane>
