--- a/src/view/Login.fxml
+++ b/src/view/Login.fxml
@@ -17,9 +17,9 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <Button fx:id="submit" layoutX="391.0" layoutY="241.0" mnemonicParsing="false" onAction="#login" text="Sign In" />
       <Label fx:id="timezoneLabel" layoutX="14.0" layoutY="268.0" text="Timezone: EST" />
-      <PasswordField fx:id="passwordField" layoutX="169.0" layoutY="190.0" prefWidth="275.0" />
+      <PasswordField fx:id="passwordField" layoutX="169.0" layoutY="190.0" onAction="#login" prefWidth="275.0" />
+      <Button fx:id="submit" layoutX="391.0" layoutY="241.0" mnemonicParsing="false" onAction="#login" text="Sign In" />
       <Label fx:id="incorrectPassword" layoutX="169.0" layoutY="224.0" textFill="RED" />
    </children>
 </AnchorPane>
