--- a/src/view/Dashboard.fxml
+++ b/src/view/Dashboard.fxml
@@ -14,21 +14,21 @@
    <children>
       <TabPane layoutX="50.0" layoutY="50.0" minHeight="500.0" minWidth="900.0" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
-          <Tab text="Appointments">
+          <Tab fx:id="appTab" text="Appointments">
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <TableView layoutY="36.0" maxHeight="400.0" maxWidth="750.0" minHeight="400.0" minWidth="900.0" prefHeight="400.0" prefWidth="750.0">
+                        <TableView fx:id="appointmentView" layoutY="36.0" maxHeight="400.0" maxWidth="750.0" minHeight="400.0" minWidth="900.0" prefHeight="400.0" prefWidth="750.0">
                            <columns>
-                              <TableColumn prefWidth="44.0" text="ID" />
-                              <TableColumn prefWidth="106.0" text="Title" />
-                              <TableColumn prefWidth="82.0" text="Type" />
-                              <TableColumn prefWidth="192.0" text="Description" />
-                              <TableColumn prefWidth="108.0" text="Location" />
-                              <TableColumn prefWidth="110.0" text="Contact" />
-                              <TableColumn prefWidth="93.0" text="Start Time" />
-                              <TableColumn prefWidth="88.0" text="End Time" />
-                              <TableColumn prefWidth="76.0" text="Customer ID" />
+                              <TableColumn fx:id="appIDCol" prefWidth="44.0" text="ID" />
+                              <TableColumn fx:id="appTitleCol" prefWidth="106.0" text="Title" />
+                              <TableColumn fx:id="appTypeCol" prefWidth="82.0" text="Type" />
+                              <TableColumn fx:id="appDescCol" prefWidth="192.0" text="Description" />
+                              <TableColumn fx:id="appLocationCol" prefWidth="108.0" text="Location" />
+                              <TableColumn fx:id="appContactCol" prefWidth="72.0" text="Contact ID" />
+                              <TableColumn fx:id="appStartCol" prefWidth="111.0" text="Start Time" />
+                              <TableColumn fx:id="appEndCol" prefWidth="104.0" text="End Time" />
+                              <TableColumn fx:id="appCustIDCol" text="Customer ID" />
                            </columns>
                            <columnResizePolicy>
                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -39,32 +39,34 @@
                               <Font name="System Bold Italic" size="14.0" />
                            </font>
                         </Label>
-                        <RadioButton layoutX="843.0" layoutY="16.0" mnemonicParsing="false" text="Month" />
-                        <RadioButton layoutX="780.0" layoutY="16.0" mnemonicParsing="false" text="Week" />
-                        <RadioButton layoutX="735.0" layoutY="16.0" mnemonicParsing="false" text="All" />
+                        <RadioButton fx:id="monthRadio" layoutX="843.0" layoutY="16.0" mnemonicParsing="false" text="Month" />
+                        <RadioButton fx:id="weekRadio" layoutX="780.0" layoutY="16.0" mnemonicParsing="false" text="Week" />
+                        <RadioButton fx:id="allRadio" layoutX="735.0" layoutY="16.0" mnemonicParsing="false" text="All" />
+                        <Button fx:id="newAppButton" layoutX="860.0" layoutY="445.0" mnemonicParsing="false" text="New" />
+                        <Button fx:id="editAppButton" layoutX="813.0" layoutY="445.0" mnemonicParsing="false" text="Edit" />
                      </children>
                   </AnchorPane>
             </content>
           </Tab>
-          <Tab text="Customers">
+          <Tab fx:id="custTab" text="Customers">
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <TableView layoutY="36.0" maxHeight="400.0" maxWidth="750.0" minHeight="400.0" minWidth="900.0" prefHeight="400.0" prefWidth="750.0">
+                        <TableView fx:id="customerView" layoutY="36.0" maxHeight="400.0" maxWidth="750.0" minHeight="400.0" minWidth="900.0" prefHeight="400.0" prefWidth="750.0">
                            <columns>
-                              <TableColumn prefWidth="44.0" text="ID" />
-                              <TableColumn prefWidth="183.0" text="Name" />
-                              <TableColumn prefWidth="274.0" text="Address" />
-                              <TableColumn prefWidth="127.0" text="Postal Code" />
-                              <TableColumn prefWidth="117.0" text="State/Territory" />
-                              <TableColumn prefWidth="154.0" text="Country" />
+                              <TableColumn fx:id="custIDCol" prefWidth="44.0" text="ID" />
+                              <TableColumn fx:id="custNameCol" prefWidth="183.0" text="Name" />
+                              <TableColumn fx:id="custAddressCol" prefWidth="274.0" text="Address" />
+                              <TableColumn fx:id="custZipCol" prefWidth="127.0" text="Postal Code" />
+                              <TableColumn fx:id="custStateCol" prefWidth="117.0" text="State/Territory" />
+                              <TableColumn fx:id="custCountryCol" prefWidth="154.0" text="Country" />
                            </columns>
                            <columnResizePolicy>
                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                            </columnResizePolicy>
                         </TableView>
-                        <Button layoutX="860.0" layoutY="445.0" mnemonicParsing="false" text="New" />
-                        <Button layoutX="815.0" layoutY="445.0" mnemonicParsing="false" text="Edit" />
+                        <Button fx:id="newCustButton" layoutX="860.0" layoutY="445.0" mnemonicParsing="false" text="New" />
+                        <Button fx:id="editCustButton" layoutX="813.0" layoutY="445.0" mnemonicParsing="false" text="Edit" />
                         <Label layoutY="14.0" text=" All Customers">
                            <font>
                               <Font name="System Bold Italic" size="14.0" />
