--- a/src/view/Dashboard.fxml
+++ b/src/view/Dashboard.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
@@ -16,7 +17,7 @@
         <tabs>
           <Tab fx:id="appTab" text="Appointments">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+              <AnchorPane maxWidth="1000.0" minHeight="0.0" minWidth="1000.0" prefHeight="180.0" prefWidth="1000.0">
                      <children>
                         <TableView fx:id="appointmentView" layoutY="36.0" maxHeight="400.0" maxWidth="750.0" minHeight="400.0" minWidth="1000.0" prefHeight="400.0" prefWidth="750.0">
                            <columns>
@@ -40,11 +41,36 @@
                               <Font name="System Bold Italic" size="14.0" />
                            </font>
                         </Label>
-                        <RadioButton fx:id="monthRadio" layoutX="929.0" layoutY="16.0" mnemonicParsing="false" text="Month" />
-                        <RadioButton fx:id="weekRadio" layoutX="868.0" layoutY="16.0" mnemonicParsing="false" text="Week" />
-                        <RadioButton fx:id="allRadio" layoutX="825.0" layoutY="16.0" mnemonicParsing="false" text="All" />
+                        <RadioButton fx:id="monthRadio" layoutX="929.0" layoutY="16.0" mnemonicParsing="false" onAction="#toggleSwitch" text="Month" />
+                        <RadioButton fx:id="weekRadio" layoutX="868.0" layoutY="16.0" mnemonicParsing="false" onAction="#toggleSwitch" text="Week" />
+                        <RadioButton fx:id="allRadio" layoutX="825.0" layoutY="16.0" mnemonicParsing="false" onAction="#toggleSwitch" selected="true" text="All" />
                         <Button fx:id="newAppButton" layoutX="958.0" layoutY="445.0" mnemonicParsing="false" onAction="#launchAppointmentWindow" text="New" />
                         <Button fx:id="editAppButton" layoutX="911.0" layoutY="445.0" mnemonicParsing="false" text="Edit" />
+                        <AnchorPane fx:id="dateAnchor" layoutX="400.0" layoutY="-9.0" maxHeight="50.0" maxWidth="250.0" minHeight="50.0" minWidth="250.0" prefHeight="50.0" prefWidth="250.0" visible="false">
+                           <children>
+                              <Button fx:id="dateLeft" layoutX="15.0" layoutY="17.0" maxWidth="30.0" minWidth="30.0" mnemonicParsing="false" onAction="#lastWeek" prefHeight="20.0" prefWidth="30.0" scaleX="0.7" scaleY="1.3" text="◄">
+                                 <font>
+                                    <Font size="28.0" />
+                                 </font>
+                                 <padding>
+                                    <Insets bottom="-10.0" top="-10.0" />
+                                 </padding>
+                              </Button>
+                              <Label fx:id="dateRangeLabel" alignment="CENTER" layoutX="50.0" layoutY="19.0" maxWidth="140.0" minWidth="150.0" prefHeight="17.0" prefWidth="140.0" text="00/00/0000 - 00/00/0000" textAlignment="CENTER">
+                                 <font>
+                                    <Font name="System Bold" size="12.0" />
+                                 </font>
+                              </Label>
+                              <Button fx:id="dateRight" alignment="CENTER_RIGHT" contentDisplay="TOP" graphicTextGap="0.0" layoutX="205.0" layoutY="17.0" maxWidth="30.0" minWidth="30.0" mnemonicParsing="false" onAction="#nextWeek" prefWidth="30.0" scaleX="0.7" scaleY="1.3" text="►" textAlignment="CENTER">
+                                 <font>
+                                    <Font size="28.0" />
+                                 </font>
+                                 <padding>
+                                    <Insets bottom="-10.0" left="1.0" right="1.0" top="-10.0" />
+                                 </padding>
+                              </Button>
+                           </children>
+                        </AnchorPane>
                      </children>
                   </AnchorPane>
             </content>
