--- a/src/view/Dashboard.fxml
+++ b/src/view/Dashboard.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" maxHeight="600.0" maxWidth="1100.0" minHeight="600.0" minWidth="1100.0" prefHeight="600.0" prefWidth="1040.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.DashboardController">
+<AnchorPane id="AnchorPane" maxHeight="600.0" maxWidth="1100.0" minHeight="600.0" minWidth="1100.0" prefHeight="600.0" prefWidth="1040.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.DashboardController">
    <children>
       <TabPane layoutX="50.0" layoutY="50.0" minHeight="500.0" minWidth="1000.0" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
@@ -48,7 +48,7 @@
                         <Button fx:id="editAppButton" layoutX="911.0" layoutY="445.0" mnemonicParsing="false" text="Edit" />
                         <AnchorPane fx:id="dateAnchor" layoutX="400.0" layoutY="-9.0" maxHeight="50.0" maxWidth="250.0" minHeight="50.0" minWidth="250.0" prefHeight="50.0" prefWidth="250.0" visible="false">
                            <children>
-                              <Button fx:id="dateLeft" layoutX="15.0" layoutY="17.0" maxWidth="30.0" minWidth="30.0" mnemonicParsing="false" onAction="#lastWeek" prefHeight="20.0" prefWidth="30.0" scaleX="0.7" scaleY="1.3" text="◄">
+                              <Button fx:id="dateLeft" layoutX="15.0" layoutY="17.0" maxWidth="30.0" minWidth="30.0" mnemonicParsing="false" onAction="#last" prefHeight="20.0" prefWidth="30.0" scaleX="0.7" scaleY="1.3" text="◄">
                                  <font>
                                     <Font size="28.0" />
                                  </font>
@@ -61,7 +61,7 @@
                                     <Font name="System Bold" size="12.0" />
                                  </font>
                               </Label>
-                              <Button fx:id="dateRight" alignment="CENTER_RIGHT" contentDisplay="TOP" graphicTextGap="0.0" layoutX="205.0" layoutY="17.0" maxWidth="30.0" minWidth="30.0" mnemonicParsing="false" onAction="#nextWeek" prefWidth="30.0" scaleX="0.7" scaleY="1.3" text="►" textAlignment="CENTER">
+                              <Button fx:id="dateRight" alignment="CENTER_RIGHT" contentDisplay="TOP" graphicTextGap="0.0" layoutX="205.0" layoutY="17.0" maxWidth="30.0" minWidth="30.0" mnemonicParsing="false" onAction="#next" prefWidth="30.0" scaleX="0.7" scaleY="1.3" text="►" textAlignment="CENTER">
                                  <font>
                                     <Font size="28.0" />
                                  </font>
