--- a/src/view/Appointment.fxml
+++ b/src/view/Appointment.fxml
@@ -60,7 +60,7 @@
       </TableView>
       <Label layoutX="27.0" layoutY="268.0" text="Attendees:" />
       <Label layoutX="29.0" layoutY="205.0" text="Customer:" />
-      <ComboBox fx:id="customerCombo" layoutX="106.0" layoutY="201.0" onAction="#comboBoxSelection" prefHeight="25.0" prefWidth="174.0" />
+      <ComboBox fx:id="customerCombo" layoutX="106.0" layoutY="201.0" prefHeight="25.0" prefWidth="174.0" />
       <Label layoutX="352.0" layoutY="205.0" text="Contact:" />
       <ComboBox fx:id="contactCombo" layoutX="426.0" layoutY="201.0" prefHeight="25.0" prefWidth="174.0" />
       <Button fx:id="addCustomer" layoutX="242.0" layoutY="237.0" mnemonicParsing="false" onAction="#addCustomer" text="Add" />
