--- a/src/view/Dashboard.fxml
+++ b/src/view/Dashboard.fxml
@@ -3,6 +3,9 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
@@ -36,7 +39,7 @@
                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                            </columnResizePolicy>
                         </TableView>
-                        <Label layoutY="15.0" text=" Upcoming Appointments">
+                        <Label layoutY="15.0" text="Appointments">
                            <font>
                               <Font name="System Bold Italic" size="14.0" />
                            </font>
@@ -105,5 +108,15 @@
           </Tab>
         </tabs>
       </TabPane>
+      <MenuBar layoutY="2.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="25.0" prefWidth="1100.0">
+        <menus>
+          <Menu mnemonicParsing="false" text="Options">
+            <items>
+              <MenuItem mnemonicParsing="false" onAction="#launchReportsWindow" text="Generate Reports" />
+                  <MenuItem mnemonicParsing="false" text="Log out" />
+            </items>
+          </Menu>
+        </menus>
+      </MenuBar>
    </children>
 </AnchorPane>
